# flowise-dev-agent

./: .env.example  .gitignore  .mcp.json.example  DESIGN_DECISIONS.md  Dockerfile  FLOWISE_NODE_REFERENCE.md  Flowise_MCP_Builder_Guide.md  Flowise_node_reference.md  PERFORMANCE.md  README.md  ROADMAP.md  ROADMAP2.md  ROADMAP_11_Schema_Substrate_and_Render_Fidelity.md  SCHEMA_MISMATCH_FIX_PLAN.md  SESSION_2d35a51c_ANALYSIS.md  TEAMMATE_A_NOTES.md  TEAMMATE_B_NOTES.md  TEAMMATE_C_NOTES.md  TEAMMATE_D_NOTES.md  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  roadmap10_native_mcp_platform.md  roadmap3_architecture_optimization.md  roadmap5_embedded_ux.md  roadmap7_multi_domain_runtime_hardening.md  roadmap8_runtime_hardening.md  roadmap9_production_graph_runtime_hardening.md  roadmap_pending.md  roadmap_shipped.md
docs/: .ux1-agent-ids.json  .ux1-backend-status.json  .ux1-frontend-status.json  .ux1-qa-status.json  UX_API_CONTRACT_V1.md  UX_DESIGN_SYSTEM_V1.md  UX_SPEC_UI_V1.md
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: sessions.json
e2e/pages/: new-session-modal.page.ts  session-detail.page.ts  session-list.page.ts
e2e/tests/: j1-create-happy-path.spec.ts  j2-update-select-target.spec.ts  j3-iteration.spec.ts  j4-reconnect.spec.ts  smoke.spec.ts
flowise_dev_agent/: __init__.py  api.py  cli.py  instance_pool.py  reasoning.py
flowise_dev_agent/agent/: __init__.py  compiler.py  domain.py  graph.py  metrics.py  patch_ir.py  pattern_store.py  plan_schema.py  registry.py  skills.py  state.py  tools.py
flowise_dev_agent/client/: __init__.py  config.py  flowise_client.py
flowise_dev_agent/knowledge/: __init__.py  anchor_store.py  audit.py  drift.py  provider.py  refresh.py  schema_cache.py  (+1 more)
roadmap_archive/: ROADMAP6_Platform Knowledge.md  roadmap4_workday_cross_domain.md  roadmap6_ui_iteration_fixes.md  roadmap7_multi_domain_runtime_hardening.md
schemas/: flowise_audit_report.json  flowise_nodes.meta.json  flowise_nodes.snapshot.json  flowise_templates.meta.json  workday_api.meta.json  workday_mcp.meta.json  workday_mcp.snapshot.json
scripts/: simulate_frontend.py
tests/: test_build_response_race.py  test_compiler_integration.py  test_context_safety.py  test_credential_resolution.py  test_e2e_session.py  test_langsmith_datasets.py  test_langsmith_evaluators.py  test_langsmith_feedback.py  test_langsmith_metadata.py  test_langsmith_persistence.py  test_langsmith_quality.py  test_langsmith_redaction.py  test_langsmith_rules.py  test_langsmith_security.py  test_langsmith_tracer.py  test_m101_flowise_client.py  test_m102_flowise_mcp_tools.py  test_m102a_anchor_store.py  test_m102b_anchor_tool.py  test_m103_graph_mcp_wiring.py  test_m103a_anchor_contract.py  test_m104_mcp_server.py  test_m106_type_compatibility.py  test_m107_node_name_normalization.py  test_m111_nodeschemastore_3tier.py  test_m111_refresh_api_populate.py  test_m111_schema_cache_unit.py  test_m112_anchor_fields.py  test_m112_credential_param_synthesis.py  test_m112_flowdata_viewport_and_height.py  test_m112_render_safe_schema_contract.py  test_m113_refresh_api.py  test_m113_refresh_executor.py  test_m114_bounded_repair.py  test_m114_drift_validator.py  test_m114_metrics.py  test_m71_capability_first.py  test_m72_plan_contract.py  test_m73_pattern_capability.py  test_m74_telemetry.py  (+13 more)
ui/: .gitignore  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+56 files in other folders)
