[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flowise-dev-agent"
version = "0.1.0"
description = "LangGraph co-pilot for building Flowise chatflows — discover, plan, patch, test, converge"
requires-python = ">=3.11"
dependencies = [
    "cursorwise>=1.0.0",          # FlowiseClient + Settings (Flowise API layer)
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.50"]

[project.scripts]
flowise-agent = "flowise_dev_agent.api:serve"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowise_dev_agent*"]

[tool.setuptools.package-data]
flowise_dev_agent = ["skills/*.md"]
